fix row column margins on small displays

--- a/app/assets/stylesheets/app/blocks/_row.scss
+++ b/app/assets/stylesheets/app/blocks/_row.scss
@@ -8,8 +8,12 @@
 
   &__column {
     @include flex(1 0);
-    margin: 0 $common--margin;
+    // margin: 0 $common--margin;
     min-width: 400px;
     position: relative;
+
+    @media screen and (max-width: 399px) {
+      min-width: 100%;
+    }
   }
 }
